# prose_converter

./: Cargo.toml  notes_druid.md  notes_nom.md
src/: lib.rs  main.rs  simple_delegates.rs
src/http_parser/: mod.rs  parser.rs
src/prose_interpreter/: expression.rs  mod.rs  prose.rs  prose_parsec.rs  prose_regex.rs
src/prose_interpreter/expr/: expression.rs  mod.rs  operand.rs
