[package]
name = "prose_converter"
version = "0.1.0"
authors = ["Leah Roukema <leahroukema@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.9"
nom = "6.0.1"
approx = "0.1.1"

#[profile.dev]
#opt-level = 0               # Use slightly better optimizations.
# overflow-checks = false     # Disable integer overflow checks.
